src/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec
   26         | error COMMA
   27         | error RP

   28 CompSt: LC DefList StmtList RC
   29       | LC error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | IF LP Exp RP error ELSE Stmt
   38     | WHILE LP Exp RP Stmt

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp LB error RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT

   65 Args: Exp COMMA Args
   66     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 19 22 26 27 29 37 60
    INT <node> (258) 18 63
    FLOAT <node> (259) 64
    ID <node> (260) 14 16 17 20 21 57 58 61 62
    SEMI <node> (261) 4 5 7 32 34 41
    COMMA <node> (262) 9 23 26 43 65
    ASSIGNOP <node> (263) 45 46
    RELOP <node> (264) 49
    PLUS <node> (265) 50
    MINUS <node> (266) 51 55
    STAR <node> (267) 52
    DIV <node> (268) 53
    AND <node> (269) 47
    OR <node> (270) 48
    DOT <node> (271) 61
    NOT <node> (272) 56
    TYPE <node> (273) 10
    LP <node> (274) 20 21 35 36 37 38 54 57 58
    RP <node> (275) 20 21 22 27 35 36 37 38 54 57 58
    LB <node> (276) 18 19 59 60
    RB <node> (277) 18 19 59 60
    LC <node> (278) 12 28 29
    RC <node> (279) 12 28 29
    STRUCT <node> (280) 12 13
    RETURN <node> (281) 34
    IF <node> (282) 35 36 37
    ELSE <node> (283) 36 37
    WHILE <node> (284) 38
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <node> (35)
        on left: 8 9
        on right: 4 9
    Specifier <node> (36)
        on left: 10 11
        on right: 4 5 6 25 41
    StructSpecifier <node> (37)
        on left: 12 13
        on right: 11
    OptTag <node> (38)
        on left: 14 15
        on right: 12
    Tag <node> (39)
        on left: 16
        on right: 13
    VarDec <node> (40)
        on left: 17 18 19
        on right: 8 9 18 19 25 44 45
    FunDec <node> (41)
        on left: 20 21 22
        on right: 6
    VarList <node> (42)
        on left: 23 24
        on right: 20 23
    ParamDec <node> (43)
        on left: 25 26 27
        on right: 23 24
    CompSt <node> (44)
        on left: 28 29
        on right: 6 33
    StmtList <node> (45)
        on left: 30 31
        on right: 28 30
    Stmt <node> (46)
        on left: 32 33 34 35 36 37 38
        on right: 30 35 36 37 38
    DefList <node> (47)
        on left: 39 40
        on right: 12 28 39
    Def <node> (48)
        on left: 41
        on right: 39
    DecList <node> (49)
        on left: 42 43
        on right: 41 43
    Dec <node> (50)
        on left: 44 45
        on right: 42 43
    Exp <node> (51)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 32 34 35 36 37 38 45 46 47 48 49 50 51 52 53 54 55 56 59 60 61 65 66
    Args <node> (52)
        on left: 65 66
        on right: 57 65


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   22 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


State 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 26

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 27

   28 CompSt: LC . DefList StmtList RC
   29       | LC . error RC

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   41 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 30

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 31

   39 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 31


State 32

   26 ParamDec: error . COMMA
   27         | error . RP

    COMMA  shift, and go to state 48
    RP     shift, and go to state 49


State 33

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 34

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 50


State 35

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 36

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 24 (VarList)


State 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   19 VarDec: VarDec LB error . RB

    RB  shift, and go to state 53


State 40

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 54


State 41

   29 CompSt: LC error . RC

    RC  shift, and go to state 55


State 42

   28 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 27
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 43

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 26

    $default  reduce using rule 44 (Dec)


State 44

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 70


State 45

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 42 (DecList)


State 46

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 47

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 48

   26 ParamDec: error COMMA .

    $default  reduce using rule 26 (ParamDec)


State 49

   27 ParamDec: error RP .

    $default  reduce using rule 27 (ParamDec)


State 50

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


State 51

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 52

   23 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 36


State 53

   19 VarDec: VarDec LB error RB .

    $default  reduce using rule 19 (VarDec)


State 54

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 55

   29 CompSt: LC error RC .

    $default  reduce using rule 29 (CompSt)


State 56

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 57

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 58

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 62 (Exp)


State 59

   55 Exp: MINUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 74


State 60

   56 Exp: NOT . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 75


State 61

   54 Exp: LP . Exp RP

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 76


State 62

   34 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 77


State 63

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   37     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 78


State 64

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 65

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 66

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 80


State 67

   30 StmtList: Stmt . StmtList

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 27
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 81
    Stmt      go to state 67
    Exp       go to state 68


State 68

   32 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . LB error RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 69

   45 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 93


State 70

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 71

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 94
    Dec      go to state 45


State 72

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 73

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    RP     shift, and go to state 95

    Exp   go to state 96
    Args  go to state 97


State 74

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   59    | Exp . LB Exp RB
   60    | Exp . LB error RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    DOT   shift, and go to state 91
    LB    shift, and go to state 92

    $default  reduce using rule 55 (Exp)


State 75

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   59    | Exp . LB Exp RB
   60    | Exp . LB error RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 56 (Exp)


State 76

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   59    | Exp . LB Exp RB
   60    | Exp . LB error RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    RP        shift, and go to state 98
    LB        shift, and go to state 92


State 77

   34 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . LB error RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 78

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   37     | IF LP . Exp RP error ELSE Stmt

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 100


State 79

   38 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 101


State 80

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 81

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 82

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 83

   46 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 102


State 84

   49 Exp: Exp RELOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 103


State 85

   50 Exp: Exp PLUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 104


State 86

   51 Exp: Exp MINUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 105


State 87

   52 Exp: Exp STAR . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 106


State 88

   53 Exp: Exp DIV . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 107


State 89

   47 Exp: Exp AND . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 108


State 90

   48 Exp: Exp OR . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 109


State 91

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 110


State 92

   59 Exp: Exp LB . Exp RB
   60    | Exp LB . error RB

    error  shift, and go to state 111
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 112


State 93

   45 Dec: VarDec ASSIGNOP Exp .
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . LB error RB
   61    | Exp . DOT ID
